--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SECRET_KEY=TESISALERTAS
+SECRET_KEY=CNBoXZICtx4bLicwKKLfMjqQfWuR5niRb-drdfctlS4=
 
 DB_HOST= 'localhost'
-DB_PORT= '5435'
+DB_PORT= '5432'
 DB_USER= 'postgres'
 DB_PASSWORD= '12345'
 DB_NAME= 'alertasdb'
